--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -27,5 +28,8 @@
     "passport-local": "^1.0.0",
     "tinify": "^1.7.1",
     "uuid": "^9.0.1"
-  }
+  },
+  "engines": {
+    "node": "v21.7.2"
+  }  
 }
